Re structure day 2

--- a/Day2/exercise2.html
+++ b/Day2/exercise2.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Exercise2 </title>
-    <link rel="stylesheet" href="../assets/css/day2Excercise2.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/css/Day2/exercise2.css">
+    <title>Document</title>
 </head>
-
 <body>
-    <div class="header">Header</div>
+    <!-- .header+(.container>(.sidebar+.content>.maincontent+.extracontent))+.footer -->
+    <div class="header bg-aqua">Header</div>
     <div class="container">
-        <div class="sidebar">Sidebar</div>
+        <div class="sidebar bg-green">Sidebar</div>
         <div class="content">
-            <div class="maincontent">Main Content</div>
-            <div class="extracontent">Extra Content</div>
+            <div class="maincontent bg-mustard">Main Content</div>
+            <div class="extracontent bg-lightgrey">Extra Content</div>
         </div>
     </div>
-    <div class="footer">Footer</div>
+    <div class="footer bg-orange">Footer</div>
 </body>
 </html>
